--- a/site/index.html
+++ b/site/index.html
@@ -4,6 +4,6 @@
 	<title>Hello Coursera! Welcome to My World</title>
 </head>
 <body>
-	<h1>Hello Coursera!</h1>
+	<h1>Hello Coursera! another comment</h1>
 </body>
 </html>
